<resources>
    <string name="app_name">Tour_app</string>
    <string name="state_name">Welcome To Lagos, Nigeria</string>
    <string name="hotels_restaurants">Hotels and Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shopping_mall">Shopping Mall</string>
    <string name="hospitals">Hospitals</string>
    <string name="Bus_station">Bus Stations</string>
    <string name="name_text">Berger</string>
    <string name="location_text">Ibafon, Lagos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_center_for_excellence">THE CENTER FOR EXCELLENCE</string>
    <string name="BERGER">berger</string>
    <string name="station2">saka.tinubu.bus.stop</string>
    <string name="station3">agboju</string>
    <string name="station4">anthony.bus.stop</string>
    <string name="station5">obalende.bus.stop</string>
    <string name="station6">bonny.camp.bus.stop</string>
    <string name="station7">cele.bus.stop</string>
    <string name="station8">maza.maza.bus.stop</string>
    <string name="station9">new.market.bus.stop</string>
    <string name="Address1">IBAFON_LAGOS</string>
    <string name="Address2">VICTORIA_ISLAND_LAGOS</string>
    <string name="Address3">LAGOS_BADAGRY_EXPY_AMUWO_ODOFIN_LAGOS</string>
    <string name="Address4">GBAGADA_LAGOS</string>
    <string name="Address5">RING_RD_LAGOS_ISLAND_LAGOS</string>
    <string name="Address6">BONNY_CAMP_BUS_STOP</string>
    <string name="Address7">IKOTUN_IDIMU_RD_OSHODI_ISOLO_LAGOS</string>
    <string name="Address8">LAGOS_BADAGRY_EXPY_AMUWO_ODOFIN_LAGOS</string>
    <string name="Address9">LEKKI_EPE_EXPRESSWAY_ETI_OSA_LAGOS</string>
    <string name="hospital1">REDDINGTON_HOSPITAL</string>
    <string name="hospital2">CEDARCREST_HOSPITALS_LIMITED</string>
    <string name="hospital3">AVE_MARIA_HOSPITAL</string>
    <string name="hospital4">LAGOON_HOSPITALS</string>
    <string name="hospital6">ST_IVES_SPECIALIST_HOSPITAL</string>
    <string name="hospital7">DIVINE_MEDICAL_CENTER_LTD</string>
    <string name="hospital9">LIFELINE_CHILDRENS_HOSPITAL</string>
    <string name="hospital8">VISION_CAPITAL_EYE_HOSPITAL</string>
    <string name="hospital10">IDEAL_EAGLE_HOSPITAL</string>
    <string name="address1">IDOWU_MARTINS_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="address2">A_KOFO_ABAYOMI_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="address3">ADETOKUNBO_ADEMOLA_STREET_VICTORIA_ISLAND_LAGOS</string>
    <string name="address">VICTORIA_ISLAND_13_IDEJO_ST_ETI_OSA_LAGOS</string>
    <string name="address4">MAITAMA_SULE_ST_IKOYI_LAGOS</string>
    <string name="address5">CAMPBELL_ST_LAGOS_ISLAND_LAGOS</string>
    <string name="address6">NORMAN_WILLIAMS_ST_IKOYI_LAGOS</string>
    <string name="address7">LEKKI_PHASE_I_LAGOS</string>
    <string name="address8">SANUSI_FAFUNWA_ST_VICTORIA_ISLAND_LAGOS1</string>
    <string name="address9">SANUSI_FAFUNWA_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="hospital">ST_NICHOLAS_HOSPITAL_CLINIC_EMERGENCY</string>
    <string name="hotel">EKO_HOTELS_AND_SUITS</string>
    <string name="hotel1">THE_AVENUE_SUITS</string>
    <string name="hotel2">INTER_CONTINENTAL_LAGOS</string>
    <string name="hotel3">THE_BLOWFISH_HOTEL</string>
    <string name="hotel4">MAISON_FAHRENHEIT_HOTEL</string>
    <string name="hotel5">RADISSON_BLU_ANCHORAGE_HOTEL</string>
    <string name="hotel6">PROTEA_HOTEL</string>
    <string name="hotel7">BENI_GOLD</string>
    <string name="Address">ADETOKUNBO_ADEMOLA_STREET_VICTORIA_ISLAND_LAGOS1</string>
    <string name="Address22">TIAMIYU_SAVAGE_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="Address23">KOFO_ABAYOMI_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="Address24">OJU_OLOBUN_STREET_VICTORIA_ISLAND_LAGOS</string>
    <string name="Address25">ADETOKUNBO_ADEMOLA_STREET_VICTORIA_ISLAND_LAGOS</string>
    <string name="Address26">A_OZUMBA_MBADIWE_AVE_VICTORIA_ISLAND_LAGOS</string>
    <string name="Address27">VIOLET_YOUGH_CL_VICTORIA_ISLAND_LAGOS</string>
    <string name="Address28">ADELEKE_ADEDOYIN_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="RFN1">CRAFT_GOURMET_BY_LOU_BAKER</string>
    <string name="RFN2">BUNGALOW_S</string>
    <string name="RFN3">RSVP_VICTORIA_ISLAND_LAGOS</string>
    <string name="RFN4">METISSE_RESTAURANT</string>
    <string name="RFN5">TALINDO_STEAK_HOUSE_LTD_RESTAURANT</string>
    <string name="RFN6">TERRA_KULTURE_VICTORIA_ISLAND_LAGOS</string>
    <string name="RFN7">IZANAGI_JAPANESE_CUISINE_VICTORIA_ISLAND_LAGOS</string>
    <string name="RFN8">GURUNAR_S_VICEROY_RESTAURANT</string>
    <string name="RFN_A1">IDOWU_MARTINS_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="RFN_A2">AKIN_ADESOLA_ST_VICTORIA_ISLAND_LAGOS1</string>
    <string name="RFN_A3">ELETU_OGABI_ST_VICTORIA_ISLAND_101001_LAGOS</string>
    <string name="RFN_A4">VICTORIA_ISLAND_LAGOS</string>
    <string name="RFN_A5">KARIMU_KOTUN_ST_VICTORIA_ISLAND_101241_LAGOS</string>
    <string name="RFN_A6">TIAMIYU_SAVAGE_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="RFN_A7">B_IDEJO_ST_VICTORIA_ISLAND_101241_LAGOS</string>
    <string name="RFN_A8">AKIN_ADESOLA_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="SM1">mega.plaza.shopping.mall</string>
    <string name="SM2">palms.shopping.mall</string>
    <string name="SM3">lagos.city.mall</string>
    <string name="SM4">maryland.mall</string>
    <string name="SM5">FOURTEEN_36_MALL</string>
    <string name="SM6">WOOLWORTHS_PLAZA</string>
    <string name="SM7">CENTRO_LEKKI_MALL</string>
    <string name="SM8">ADENIRAN_OGUNSANYA_SHOPPING_MALL</string>
    <string name="SM9">IKOYI_MALL</string>
    <string name="SMA1">33a.ademol</string>
    <string name="SMA2">14.idowu.martins.st.victoria.island.101241.lagos</string>
    <string name="SMA3">lagos.island.lagos</string>
    <string name="SMA4">IKORODU_RD_ANTHONY_LAGOS</string>
    <string name="SMA5">SANUSI_FAFUNWA_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="SMA6">ADEOLA_ODEKU_ST_VICTORIA_ISLAND_LAGOS</string>
    <string name="SMA7">ADMIRALTY_WAY_LEKKI_PHASE_I_LAGOS</string>
    <string name="SMA8">ADENIRAN_OGUNSANYA_ST_SURULERE_LAGOS</string>
    <string name="SMA9">MACGREGOR_RD_IKOYI_LAGOS</string>
</resources>

